# heekscad-old

./: .gitignore  .gitmodules  CMakeLists.txt  GraphicsCanvas.py  INSTALL.fedora  INSTALL_UBUNTU.README  INSTALL_UBUNTU.sh  README  README.github  README.md  heekscnc  readme.KimK
PyHeeksCAD/: CMakeLists.txt  PythonInterface.cpp
debian/: .gitignore  changelog  control
interface/: DoubleInput.cpp  HeeksCADInterface.cpp  HeeksObj.h  strconv.cpp
src/: AboutBox.h  DigitizeMode.cpp  Doxyfile  HArea.cpp  HArea.h  HeeksCAD.cpp  HeeksCAD.h  SelectMode.cpp  dxf.cpp  svg.cpp  svg.h
translations/: HeeksCAD.pot
translations/ko/.svn/: entries
translations/sk/: HeeksCAD.po
translations/zh/: HeeksCAD.po
